# gitlab-cli

./: Cargo.toml  README.md
resources/: read_config.json  write_config.json
src/: api.rs  cli.rs  config.rs  file.rs  gitlab.rs  main.rs  print.rs
