[package]
name = "gitlab-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
structopt = "0.3.26"
tabled = "0.8.0"
