[package]
name = "gitlab-cli"
version = "0.1.5"
edition = "2021"
description = "A command line tool for easy access of gitlab"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
structopt = "0.3.26"
tabled = {version = "0.8.0", features = ["color"]}
open = "3.0.2"
terminal-link = "0.1.0"
